Tela Inicial Pronta

--- a/SaraiManagement/Views/Estoque/Index.cshtml
+++ b/SaraiManagement/Views/Estoque/Index.cshtml
@@ -31,30 +31,30 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                <div>
-                    <a class="btn btn-outline-success" asp-controller="Estoque" asp-action="Details1" asp-route-id="@item.EstoqueID">Selecionar</a>
-                </div>
-            </td>
-           
-            <td>
-                @Html.DisplayFor(modelItem => item.Descricao)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantidade)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Categoria)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.EstoqueID">Editar</a> |
-                <a asp-action="Delete" asp-route-id="@item.EstoqueID">Deletar</a>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    <div>
+                        <a class="btn btn-outline-success" asp-controller="Estoque" asp-action="Details1" asp-route-id="@item.EstoqueID">Selecionar</a>
+                    </div>
+                </td>
 
-            </td>
-        </tr>
-}
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descricao)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantidade)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Categoria)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.EstoqueID">Editar</a> |
+                    <a asp-action="Delete" asp-route-id="@item.EstoqueID">Deletar</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
 <p>
