--- a/SaraiManagement/Views/Shared/_Layout.cshtml
+++ b/SaraiManagement/Views/Shared/_Layout.cshtml
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="navbar navbar-dark bg-dark" role="navigation">
-        <a class="navbar-brand" asp-controller="TelaInicial" asp-action="Index"> SARAI MANAGEMENT</a>
+        <a class="navbar-brand" asp-controller="TelaInicial" asp-action="Index">SARAI MANAGEMENT</a>
+
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+        </form>
     </div>
     <!-- m (margin) Margem externa de uma div
          p (padding) Margem interna de uma div -->
