--- a/SaraiManagement/Views/Usuario/Login.cshtml
+++ b/SaraiManagement/Views/Usuario/Login.cshtml
@@ -10,28 +10,46 @@
 <h4>Usuario</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Login">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+
+    <div class="col-2"></div>
+
+    <div class="container-fluid d-flex flex-wrap col-8" style="margin: 0 auto">
+
+        <div class="col-md-4">
+            <form asp-action="Login">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Nome" class="control-label"></label>
+                    <input asp-for="Nome" class="form-control" />
+                    <span asp-validation-for="Nome" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Senha" class="control-label"></label>
+                    <input asp-for="Senha" class="form-control" />
+                    <span asp-validation-for="Senha" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Login" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+
+        <div>
+            <div class="card" style="width: 15rem;">
+                <img class="card-img-top" src="~/img/Logo.jpg" alt="Imagem de capa do card">
             </div>
-            <div class="form-group">
-                <label asp-for="Senha" class="control-label"></label>
-                <input asp-for="Senha" class="form-control" />
-                <span asp-validation-for="Senha" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
+
+    </div>
+
+</div>
+
+<div class="row">
+    <div class="col-4"></div>
+    <div>
+        <a asp-action="Login">Esqueceu sua senha?</a>
     </div>
 </div>
 
-<div>
-    <a asp-action="Login">Esqueceu sua senha?</a>
-</div>
 @section Scripts {@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
