--- a/SaraiManagement/Views/Aluno/Delete.cshtml
+++ b/SaraiManagement/Views/Aluno/Delete.cshtml
@@ -76,7 +76,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="AlunoID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Details" asp-route-id="@Model.AlunoID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
     </form>
 </div>
