--- a/SaraiManagement/Views/Aluno/Edit.cshtml
+++ b/SaraiManagement/Views/Aluno/Edit.cshtml
@@ -72,6 +72,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Details" asp-route-id="@Model.AlunoID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
 </div>
 
