--- a/SaraiManagement/Views/Aluno/Create.cshtml
+++ b/SaraiManagement/Views/Aluno/Create.cshtml
@@ -70,6 +70,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
 </div>
 
