--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -17,6 +17,11 @@
             document.getElementById(id).style.display = 'block';
         }
     }
+
+    function pegarDataAtual() {
+        data = new Date();
+        document.getElementById('data').value = data.getDay() + '/' + data.getMonth() + '/' + data.getFullYear();
+    }
 </script>
 
 <h1>Create </h1>
@@ -30,28 +35,31 @@
             <div class="form-group">
                 <label asp-for="DonatarioID" class="control-label"></label>
                 <select asp-for="DonatarioID" class="form-control" asp-items="ViewBag.DonatarioID"></select>
+                <a asp-action="Create" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Cadastrar novo</a>
+
             </div>
             <div class="form-group">
                 <label asp-for="dataDoacao" class="control-label"></label>
-                <input asp-for="dataDoacao" class="form-control" />
+                <input id="data" asp-for="dataDoacao" class="form-control" />
                 <span asp-validation-for="dataDoacao" class="text-danger"></span>
+
             </div>
             <div class="form-group">
                 <label asp-for="UsuarioID" class="control-label"></label>
                 <select asp-for="UsuarioID" class="form-control" asp-items="ViewBag.UsuarioID"></select>
             </div>
-          
+
             <div>
-                <div >
+                <div>
                     <a class="btn btn-primary" onclick="mostra('test')">Fazer Doaçao em Dinheiro</a>
                 </div><br />
                 <div>
                     <a asp-controller="ItemDoado" asp-action="Create" class="btn btn-primary">Fazer Doaçao de Items</a>
                 </div>
             </div>
-           
+
             <div id="test" class="hidden form-group" style="display:none">
-                <div >
+                <div>
                     <label asp-for="Valor" class="control-label"></label>
                     <input asp-for="Valor" class="form-control" />
                     <span asp-validation-for="Valor" class="text-danger"></span>
@@ -70,7 +78,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="TelaInicial" asp-action="Index">Back to List</a>
 </div>
 
 
