--- a/SaraiManagement/Views/Usuario/Create.cshtml
+++ b/SaraiManagement/Views/Usuario/Create.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-primary" />
-                <a asp-action="List" asp-route-id="@Model.UsuarioID" class="btn btn-success" role="button" aria-pressed="true">Voltar a Lista</a>
+                <a asp-action="Index" class="btn btn-success" role="button" aria-pressed="true">Voltar </a>
             </div>
         </form>
     </div>
