--- a/SaraiManagement/Views/Movimentacao/Create.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Create.cshtml
@@ -49,7 +49,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-success" role="button" aria-pressed="true">Voltar </a>
+    <a asp-action="List" class="btn btn-success" role="button" aria-pressed="true">Voltar </a>
 </div>
 
 @section Scripts {
