--- a/SaraiManagement/Views/Doacao/Consultar.cshtml
+++ b/SaraiManagement/Views/Doacao/Consultar.cshtml
@@ -44,6 +44,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.DoacaoID">Edit</a> |
+    <a asp-action="Index" asp-controller="Estoque" >Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
