--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -41,14 +41,7 @@
                 <select asp-for="UsuarioID" class="form-control" asp-items="ViewBag.UsuarioID"></select>
             </div>
           
-            <div>
-                <div >
-                    <a class="btn btn-primary" onclick="mostra('test')">Fazer Doaçao em Dinheiro</a>
-                </div><br />
-                <div>
-                    <a asp-controller="Estoque" asp-action="Index" class="btn btn-primary">Fazer Doaçao de Items</a>
-                </div>
-            </div>
+            
            
             <div id="test" class="hidden form-group" style="display:none">
                 <div >
@@ -63,14 +56,19 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Doar"/>
+                <div>
+                    <div>
+                        <a class="btn btn-primary" onclick="mostra('test')">Fazer Doaçao em Dinheiro</a>
+                    </div><br />
+                    <div>
+                        <input type="submit" class="btn btn-primary" value="Fazer Doaçao de Items" />
+                    </div>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 
