--- a/SaraiManagement/Views/Estoque/Index.cshtml
+++ b/SaraiManagement/Views/Estoque/Index.cshtml
@@ -35,7 +35,7 @@
         <tr>
             <td>
                 <div>
-                    <a class="btn btn-outline-success" asp-controller="ItemDoado" asp-action="Create" asp-route-id="@item.EstoqueID">Selecionar</a>
+                    <a class="btn btn-outline-success" asp-controller="ItemDoado" asp-action="Create"  asp-route-idEstoque="@item.EstoqueID" asp-route-idDoacao="">Selecionar</a>
                 </div>
             </td>
            
