--- a/SaraiManagement/Views/ItemDoado/Create.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Create.cshtml
@@ -13,13 +13,14 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
             <div class="form-group">
                 <label asp-for="@Model.ItemDoados.DoacaoID" class="control-label"></label>
-                <select asp-for="@Model.ItemDoados.DoacaoID" class="form-control" asp-items="ViewBag.DoacaoID"></select>
+                <select  asp-for="@Model.ItemDoados.DoacaoID" >
+                    <option>@((ViewBag.DoacaoID as SelectList).Count())</option>  
+                </select>
             </div>
 
-            <input type="hidden" asp-for="@Model.Estoques.EstoqueID"/>
+            <input type="hidden" asp-for="@Model.Estoques.EstoqueID" />
             <div class="form-group">
                 <label asp-for="@Model.Estoques.EstoqueID" class="control-label"></label>
                 <select asp-for="@Model.Estoques.EstoqueID" class="form-control" asp-items="ViewBag.EstoqueID"></select>
@@ -27,7 +28,7 @@
                 <span asp-validation-for="@Model.Estoques.EstoqueID" class="text-danger"></span>
             </div>
 
-           
+
 
             <div class="form-group">
                 <label asp-for="@Model.Estoques.Quantidade" class="control-label"></label>
