--- a/SaraiManagement/Views/ItemDoado/Create.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Create.cshtml
@@ -1,9 +1,11 @@
 ﻿@model SaraiManagement.Models.ViewModels.EstoqueItemDoadoListViewModel
 
-@{
-    ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+@using Microsoft.AspNetCore.Http;
+
+@inject IHttpContextAccessor HttpContextAccessor
+
+@{ ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_Layout.cshtml"; }
 
 <h1>Create</h1>
 
@@ -14,53 +16,17 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-<<<<<<< HEAD
-<<<<<<< HEAD
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="DoacaoID" />
-=======
-                <label asp-for="DoacaoID" class="control-label"></label>
-                <select asp-for="DoacaoID" class="form-control" asp-items="ViewBag.DoacaoID"></select>
->>>>>>> a8b9f1ce0b59afbe3897c06aa24abb1ae58443ef
-=======
                 <label asp-for="@Model.ItemDoados.DoacaoID" class="control-label"></label>
-<<<<<<< HEAD
-                <select asp-for="@Model.ItemDoados.DoacaoID" class="form-control" asp-items="ViewBag.DoacaoID"></select>
->>>>>>> 2d2ef98d8029dfae5ff06adaa2ac85beab2a16b1
-=======
-                <select  asp-for="@Model.ItemDoados.DoacaoID" >
-                    <option>@((ViewBag.DoacaoID as SelectList).Count())</option>  
-                </select>
->>>>>>> Joao
+                <select asp-for="@HttpContextAccessor.HttpContext.Session.GetInt32("idDoacao")"></select>
             </div>
 
             <input type="hidden" asp-for="@Model.Estoques.EstoqueID" />
             <div class="form-group">
-<<<<<<< HEAD
-<<<<<<< HEAD
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="EstoqueID" />
-
-
-
-
-                <div class="form-group">
-                    <a class="btn btn-outline-dark" type="submit" asp-controller="Estoque" asp-action=Index>Estoque</a>
-                </div>
-
-
-=======
-                <label asp-for="EstoqueID" class="control-label"></label>
-                <select asp-for="EstoqueID" class="form-control" asp-items="ViewBag.EstoqueID"></select>
-                <span asp-validation-for="EstoqueID" class="text-danger"></span>
-=======
                 <label asp-for="@Model.Estoques.EstoqueID" class="control-label"></label>
                 <select asp-for="@Model.Estoques.EstoqueID" class="form-control" asp-items="ViewBag.EstoqueID"></select>
                 <select asp-for="@Model.Estoques.Descricao" class="form-control" asp-items="ViewBag.Descricao"></select>
                 <span asp-validation-for="@Model.Estoques.EstoqueID" class="text-danger"></span>
->>>>>>> 2d2ef98d8029dfae5ff06adaa2ac85beab2a16b1
             </div>
->>>>>>> a8b9f1ce0b59afbe3897c06aa24abb1ae58443ef
 
 
 
@@ -80,4 +46,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
