--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -57,16 +57,16 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div  class="form-control">
                 <div>
-                    <div>
-                        <a class="btn btn-primary" onclick="mostra('test')">Fazer Doaçao em Dinheiro</a>
-                    </div><br />
-                    <div>
-                        <input type="submit" class="btn btn-primary" value="Fazer Doaçao de Itens" />
-                    </div>
+                    <a class="btn btn-primary" onclick="mostra('test')">Fazer Doaçao em Dinheiro</a>
+                </div> 
+                <br />
+                <div>
+                    <input type="submit" class="btn btn-primary" value="Fazer Doaçao de Itens" />
                 </div>
             </div>
+            
         </form>
     </div>
 </div>
