--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -21,9 +21,7 @@
     }
 </script>
 
-<h1>Create </h1>
-
-<h4>Doacao</h4>
+<h1>Doacao</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -57,13 +55,16 @@
                 </div>
             </div>
 
-            <div  class="form-control">
+            <div class="form-group">
                 <div>
                     <a class="btn btn-primary" onclick="mostra('test')">Fazer Doaçao em Dinheiro</a>
-                </div> 
+                </div>
                 <br />
                 <div>
-                    <input type="submit" class="btn btn-primary" value="Fazer Doaçao de Itens" />
+                    <input type="submit" class="btn btn-primary" asp-route-x="1" value="Fazer Doaçao de Itens" />
+                </div>
+                <div>
+                    <input type="submit" class="btn btn-primary" value="Finalizar" />
                 </div>
             </div>
             
