--- a/SaraiManagement/Views/ItemDoado/Create.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Create.cshtml
@@ -33,13 +33,22 @@
                 <span asp-validation-for="@Model.Quantidade" class="text-danger"></span>
             </div>
 
+           
             <div class="form-group">
                 <input type="submit" value="Adicionar Novo Item a esta Doaçao" class="btn btn-primary" asp-route-x="Sim" /> <br /><br />
-                <input type="submit" value="Finalizar" asp-route-x="Nao" class="btn btn-primary" />
+                <input type="submit" value="Vizualizar" class="btn btn-primary" asp-route-x="Vizualizar" /> <br /><br />
+                <input type="submit" value="Finalizar" class="btn btn-primary" /> <br /><br />
+
+
 
             </div>
+            
+
+
         </form>
     </div>
 </div>
+
+
 
 
