--- a/SaraiManagement/Views/Movimentacao/Create.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Create.cshtml
@@ -13,6 +13,10 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div>
+                <label asp-for="CaixaID" class="control-label"></label>
+                <select asp-for="CaixaID" class="form-control" asp-items="ViewBag.CaixaID"></select>
+            </div>
             <div class="form-group">
                 <label asp-for="Valor" class="control-label"></label>
                 <input asp-for="Valor" class="form-control" />
@@ -35,11 +39,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="DoadorID" class="control-label"></label>
-                <select asp-for="DoadorID" class ="form-control" asp-items="ViewBag.DoadorID"></select>
+                <select asp-for="DoadorID" class="form-control" asp-items="ViewBag.DoadorID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="UsuarioID" class="control-label"></label>
-                <select asp-for="UsuarioID" class ="form-control" asp-items="ViewBag.UsuarioID"></select>
+                <select asp-for="UsuarioID" class="form-control" asp-items="ViewBag.UsuarioID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-primary" />
