--- a/SaraiManagement/Views/TelaInicial/Index.cshtml
+++ b/SaraiManagement/Views/TelaInicial/Index.cshtml
@@ -26,7 +26,7 @@
         <img class="card-img-top" src="~/img/CadastroCaixa.png" alt="Imagem de capa do card">
         <div class="card-body">
             <h5 class="card-title">Gerenciamento de Caixa</h5>
-            <p class="card-text">Descricao ---</p>
+            <p class="card-text">Vizualizar Caixas</p>
         </div>
 
         <!-- Botão para acionar modal -->
@@ -102,7 +102,7 @@
 
         <!-- Botão para acionar modal -->
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalMovimentacao" style="margin: 5% auto">
-            Gerenciar Itens Doados
+            Gerenciar Movimentaçoes
         </button>
     </div>
 
@@ -152,6 +152,8 @@
             </div>
             <div class="modal-body" style="margin: 0 auto">
                 <a asp-controller="Caixa" asp-action="Create" class="btn btn-primary">Cadastrar Caixa</a>
+                <a asp-controller="Caixa" asp-action="Index" class="btn btn-primary">Visualizar Caixas</a>
+
             </div>
         </div>
     </div>
