--- a/SaraiManagement/Views/Estoque/Index.cshtml
+++ b/SaraiManagement/Views/Estoque/Index.cshtml
@@ -57,5 +57,6 @@
     </tbody>
 </table>
 <p>
-    <a class="btn btn-primary" type="submit" asp-action="Create">Cadastrar Novo Item</a>
+    <a class="btn btn-outline-primary" asp-action="Index" asp-controller="ItemDoado" clas> Voltar </a>
+
 </p>
