--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -57,17 +57,20 @@
 
             <div class="form-group">
                 <div>
-                    <a class="btn btn-primary" onclick="mostra('test')">Fazer Doaçao em Dinheiro</a>
+                    <a class="btn btn-outline-primary" onclick="mostra('test')">Fazer Doaçao em Dinheiro</a>
                 </div>
                 <br />
                 <div>
-                    <input type="submit" class="btn btn-primary" asp-route-x="1" value="Fazer Doaçao de Itens" />
+                    <input type="submit" class="btn btn-outline-primary" asp-route-x="1" value="Fazer Doaçao de Itens" />
                 </div>
+                <br />
+
                 <div>
-                    <input type="submit" class="btn btn-primary" value="Finalizar" />
+                    <input type="submit" class="btn btn-success" value="Finalizar" />
                 </div>
             </div>
-            
+
         </form>
     </div>
 </div>
+
