--- a/SaraiManagement/Views/TelaInicial/Index.cshtml
+++ b/SaraiManagement/Views/TelaInicial/Index.cshtml
@@ -223,7 +223,7 @@
             </div>
             <div class="modal-body" style="margin: 0 auto">
                 <a asp-controller="Estoque" asp-action="Create" class="btn btn-primary">Cadastrar item no Estoque</a>
-                <a asp-controller="Estoque" asp-action="Index" class="btn btn-primary">Visualizar itens no Estoque</a>
+                <a asp-controller="Estoque" asp-action="List" class="btn btn-primary">Visualizar itens no Estoque</a>
             </div>
         </div>
     </div>
