--- a/SaraiManagement/Views/Estoque/Create.cshtml
+++ b/SaraiManagement/Views/Estoque/Create.cshtml
@@ -28,13 +28,13 @@
                 <span asp-validation-for="Categoria" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Voltar a Lista</a>
+    <a asp-action="List">Voltar a Lista</a>
 </div>
 
