--- a/SaraiManagement/Views/Estoque/Index.cshtml
+++ b/SaraiManagement/Views/Estoque/Index.cshtml
@@ -47,16 +47,11 @@
         <td>
         @Html.DisplayFor(modelItem => item.Categoria)
         </td>
-        <td>
-        <a asp-action="Edit" asp-route-id="@item.EstoqueID">Editar</a> |
-        <a asp-action="Delete" asp-route-id="@item.EstoqueID">Deletar</a>
-
-        </td>
+       
     </tr>
 }
     </tbody>
 </table>
 <p>
-    <a class="btn btn-outline-primary" asp-action="Index" asp-controller="ItemDoado" clas> Voltar </a>
-
+    <a class="btn btn-primary" asp-action="List" asp-controller="ItemDoado" clas> Voltar </a>
 </p>
