--- a/SaraiManagement/Views/Estoque/Index.cshtml
+++ b/SaraiManagement/Views/Estoque/Index.cshtml
@@ -17,7 +17,8 @@
                 </form>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Descricao)
+                Descrição
+                @*@Html.DisplayNameFor(model => model.Descricao)*@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Quantidade)
@@ -53,5 +54,5 @@
     </tbody>
 </table>
 <p>
-    <a class="btn btn-primary" asp-action="List" asp-controller="ItemDoado" clas> Voltar </a>
+    <a class="btn btn-success" asp-action="List" asp-controller="ItemDoado" clas> Voltar </a>
 </p>
