--- a/SaraiManagement/Views/Estoque/List.cshtml
+++ b/SaraiManagement/Views/Estoque/List.cshtml
@@ -44,8 +44,8 @@
                 @Html.DisplayFor(modelItem => item.Categoria)
             </td>
             <td>
-                <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.EstoqueID">Edit</a>
-                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.EstoqueID">Delete</a>
+                <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.EstoqueID">Editar</a>
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.EstoqueID">Excluir</a>
             </td>
         </tr>
 }
