--- a/SaraiManagement/Views/Estoque/Details.cshtml
+++ b/SaraiManagement/Views/Estoque/Details.cshtml
@@ -5,14 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
-    <h4>Estoque</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descricao)
+            <label>Descrição</label>
+            @*@Html.DisplayNameFor(model => model.Descricao)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Descricao)
@@ -32,7 +31,7 @@
     </dl>
 </div>
 <div>
-    <a asp-controller="ItemDoado" asp-action="Create" asp-route-id="@Model.EstoqueID">Selecionar</a>
-    <a asp-action="Edit" asp-route-id="@Model.EstoqueID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @*<a asp-controller="ItemDoado" asp-action="Create" asp-route-id="@Model.EstoqueID">Selecionar</a>*@
+    <a asp-action="Edit" asp-route-id="@Model.EstoqueID"  class="btn btn-primary">Editar</a> |
+    <a class="btn btn-success" asp-action="List" asp-controller="Estoque" clas> Voltar </a>
 </div>
