--- a/SaraiManagement/Views/Estoque/Edit.cshtml
+++ b/SaraiManagement/Views/Estoque/Edit.cshtml
@@ -14,28 +14,24 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="EstoqueID" />
             <div class="form-group">
-                <label asp-for="Descricao" class="control-label"></label>
+                <label asp-for="Descricao" class="control-label">Descrição:</label>
                 <input asp-for="Descricao" class="form-control" />
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Quantidade" class="control-label"></label>
+                <label asp-for="Quantidade" class="control-label">Quantidade:</label>
                 <input asp-for="Quantidade" class="form-control" />
                 <span asp-validation-for="Quantidade" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Categoria" class="control-label"></label>
+                <label asp-for="Categoria" class="control-label">Categoria:</label>
                 <select asp-for="Categoria" class="form-control" asp-items="Html.GetEnumSelectList<SaraiManagement.Models.Enuns.Categoria>()"></select>
                 <span asp-validation-for="Categoria" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
+                <a class="btn btn-success" asp-action="List" asp-controller="Estoque" clas> Voltar </a>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Voltar a Lista</a>
-</div>
-
