--- a/SaraiManagement/Views/ItemDoado/Delete.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Delete.cshtml
@@ -6,18 +6,20 @@
 }
 
 
-<h3>Certeza que deseja deletar?</h3>
+<h3>Tem certeza que deseja excluir?</h3>
 <div>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Estoque)
+          @*@Html.DisplayNameFor(model => model.Estoque)*@
+          <label>Item:</label>
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Estoque.Descricao)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Quantidade)
+            <label>Quantidade:</label>
+           @*@Html.DisplayNameFor(model => model.Quantidade)*@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Quantidade)
@@ -26,7 +28,8 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="ItemDoadoID"/>
+        <input type="hidden" asp-for="ItemDoadoID" />
         <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="List" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
     </form>
 </div>
