--- a/SaraiManagement/Views/ItemDoado/Edit.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Edit.cshtml
@@ -15,31 +15,27 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ItemDoadoID" />
             <div class="form-group">
-                <label asp-for="DoacaoID" class="control-label"></label>
+                <label asp-for="DoacaoID" class="control-label">Doação:</label>
                 <select asp-for="DoacaoID" class="form-control" asp-items="ViewBag.DoacaoID"></select>
                 <span asp-validation-for="DoacaoID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EstoqueID" class="control-label"></label>
+                <label asp-for="EstoqueID" class="control-label">Item:</label>
                 <select asp-for="EstoqueID" class="form-control" asp-items="ViewBag.EstoqueID"></select>
                 <span asp-validation-for="EstoqueID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Quantidade" class="control-label"></label>
+                <label asp-for="Quantidade" class="control-label">Quantidade:</label>
                 <input asp-for="Quantidade" class="form-control" />
                 <span asp-validation-for="Quantidade" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <a asp-action="List" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
