--- a/SaraiManagement/Views/Movimentacao/Consultar.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Consultar.cshtml
@@ -5,17 +5,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Consultar</h1>
+<h1>Detalhes</h1>
 
 <div>
-    <h4>Movimentacao</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Valor)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Valor)
+            @Html.DisplayFor(model=> model.Valor)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TipoMovimentacao)
@@ -39,7 +38,7 @@
             @Html.DisplayNameFor(model => model.Doador)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Doador.Cidade)
+            @Html.DisplayFor(model => model.Doador.Nome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Usuario)
@@ -51,12 +50,12 @@
             @Html.DisplayNameFor(model => model.Caixa)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Caixa.CaixaID)
+            @Html.DisplayFor(model => model.Caixa.Descricao)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.MovimentacaoID" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Editar</a>
-    <a asp-action="Delete" asp-route-id="@Model.MovimentacaoID" class="btn btn-danger btn-lg active" role="button" aria-pressed="true">Excluir</a>
-    <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success  btn-lg" role="button" aria-pressed="true">Voltar a Lista</a>
+    <a asp-action="Edit" asp-route-id="@Model.MovimentacaoID" class="btn btn-primary" role="button" aria-pressed="true">Editar</a>
+    <a asp-action="Delete" asp-route-id="@Model.MovimentacaoID" class="btn btn-danger" role="button" aria-pressed="true">Excluir</a>
+    <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
 </div>
