--- a/SaraiManagement/Views/Movimentacao/Create.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Create.cshtml
@@ -5,57 +5,51 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>Movimentacao</h4>
+<h1>Cadastrar</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div>
-                <label asp-for="CaixaID" class="control-label"></label>
+                <label asp-for="CaixaID" class="control-label">Caixa:</label>
                 <select asp-for="CaixaID" class="form-control" asp-items="ViewBag.CaixaID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Valor" class="control-label"></label>
+                <label asp-for="Valor" class="control-label">Valor:</label>
                 <input asp-for="Valor" class="form-control" />
                 <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TipoMovimentacao" class="control-label"></label>
+                <label asp-for="TipoMovimentacao" class="control-label">Tipo da movimentação:</label>
                 <select asp-for="@Model.TipoMovimentacao" class="form-control" asp-items="Html.GetEnumSelectList<SaraiManagement.Models.Enuns.tipoMovimentacao>()"></select>
                 <span asp-validation-for="TipoMovimentacao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DataMovimentacao" class="control-label"></label>
+                <label asp-for="DataMovimentacao" class="control-label">Data da movimentação:</label>
                 <input asp-for="DataMovimentacao" class="form-control" />
                 <span asp-validation-for="DataMovimentacao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Descricao" class="control-label"></label>
+                <label asp-for="Descricao" class="control-label">Descrição:</label>
                 <input asp-for="Descricao" class="form-control" />
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DoadorID" class="control-label"></label>
+                <label asp-for="DoadorID" class="control-label">Doador:</label>
                 <select asp-for="DoadorID" class="form-control" asp-items="ViewBag.DoadorID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="UsuarioID" class="control-label"></label>
+                <label asp-for="UsuarioID" class="control-label">Usuario:</label>
                 <select asp-for="UsuarioID" class="form-control" asp-items="ViewBag.UsuarioID"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <a asp-controller="TelaInicial" asp-action="Index" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="List" class="btn btn-success" role="button" aria-pressed="true">Voltar </a>
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
