--- a/SaraiManagement/Views/Movimentacao/Delete.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Delete.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Apagar</h1>
+<h1>Excluir</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja excluir?</h3>
 <div>
     <h4>Movimentacao</h4>
     <hr />
@@ -58,7 +58,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="MovimentacaoID" />
-        <input type="submit" value="Excluir" class="btn btn-danger" />
-        <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success" role="button" aria-pressed="true">Voltar a Lista</a>
+        <input type="submit" value="Excluir" class="btn btn-danger"/>
+        <a asp-action="List" asp-route-id="@Model.MovimentacaoID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
     </form>
 </div>
