--- a/SaraiManagement/Views/Usuario/Create.cshtml
+++ b/SaraiManagement/Views/Usuario/Create.cshtml
@@ -5,32 +5,30 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>Usuario</h4>
+<h1>Cadastrar</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
+                <label asp-for="Nome" class="control-label">Nome:</label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Senha" class="control-label"></label>
+                <label asp-for="Senha" class="control-label">Senha:</label>
                 <input asp-for="Senha" class="form-control" />
                 <span asp-validation-for="Senha" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Tipo" class="control-label"></label>
+                <label asp-for="Tipo" class="control-label">Tipo:</label>
                 <select asp-for="Tipo" class="form-control" asp-items="Html.GetEnumSelectList<SaraiManagement.Models.Enuns.tipoUsuario>()"></select>
                 <span asp-validation-for="Tipo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-success" role="button" aria-pressed="true">Voltar </a>
+                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <a asp-controller="TelaInicial" asp-action="Index" class="btn btn-success" role="button" aria-pressed="true">Voltar </a>
             </div>
         </form>
     </div>
