--- a/SaraiManagement/Views/Usuario/Login.cshtml
+++ b/SaraiManagement/Views/Usuario/Login.cshtml
@@ -7,7 +7,6 @@
 
 <h1>Login</h1>
 
-<h4>Usuario</h4>
 <hr />
 <div class="row">
 
@@ -19,17 +18,17 @@
             <form asp-action="Login">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Nome" class="control-label"></label>
+                    <label asp-for="Nome" class="control-label">Usuario:</label>
                     <input asp-for="Nome" class="form-control" />
                     <span asp-validation-for="Nome" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Senha" class="control-label"></label>
+                    <label asp-for="Senha" class="control-label">Senha:</label>
                     <input asp-for="Senha" class="form-control" />
                     <span asp-validation-for="Senha" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Login" class="btn btn-primary" />
+                    <input type="submit" value="Entrar" class="btn btn-primary btn-lg" />
                 </div>
             </form>
         </div>
@@ -47,7 +46,7 @@
 <div class="row">
     <div class="col-4"></div>
     <div>
-        <a asp-action="Login">Esqueceu sua senha?</a>
+        @*<a asp-action="Login">Esqueceu sua senha?</a>*@
     </div>
 </div>
 
