--- a/SaraiManagement/Views/Estoque/Delete.cshtml
+++ b/SaraiManagement/Views/Estoque/Delete.cshtml
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="EstoqueID" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
-        <a class="btn btn-success" asp-action="List" asp-controller="Estoque" clas> Voltar </a>a asp-action="Index">Voltar</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" />
+        <a class="btn btn-success" asp-action="List" asp-controller="Estoque"> Voltar</a>
     </form>
 </div>
