--- a/SaraiManagement/Views/Estoque/Details.cshtml
+++ b/SaraiManagement/Views/Estoque/Details.cshtml
@@ -31,7 +31,7 @@
     </dl>
 </div>
 <div>
-    @*<a asp-controller="ItemDoado" asp-action="Create" asp-route-id="@Model.EstoqueID">Selecionar</a>*@
-    <a asp-action="Edit" asp-route-id="@Model.EstoqueID"  class="btn btn-primary">Editar</a> |
+    <a asp-controller="ItemDoado" asp-action="Create" asp-route-id="@Model.EstoqueID" class="btn btn-primary">Selecionar</a>
+    <a asp-action="Edit" asp-route-id="@Model.EstoqueID"  class="btn btn-outline-success">Editar</a>
     <a class="btn btn-success" asp-action="List" asp-controller="Estoque" clas> Voltar </a>
 </div>
