--- a/SaraiManagement/Views/Estoque/Index.cshtml
+++ b/SaraiManagement/Views/Estoque/Index.cshtml
@@ -17,7 +17,7 @@
                 </form>
             </th>
             <th>
-                Descrição
+                <label>Descrição</label>
                 @*@Html.DisplayNameFor(model => model.Descricao)*@
             </th>
             <th>
