--- a/SaraiManagement/Views/Estoque/Index.cshtml
+++ b/SaraiManagement/Views/Estoque/Index.cshtml
@@ -12,7 +12,7 @@
                 <form asp-controller="Estoque" asp-action="Index">
                     <p>
                         <input type="text" name="SearchString" />
-                        <input type="submit" value="Pesquisar" />
+                        <input class="btn btn-primary" type="submit" value="Pesquisar" />
                     </p>
                 </form>
             </th>
