--- a/SaraiManagement/Views/Estoque/Index.cshtml
+++ b/SaraiManagement/Views/Estoque/Index.cshtml
@@ -12,13 +12,12 @@
                 <form asp-controller="Estoque" asp-action="Index">
                     <p>
                         <input type="text" name="SearchString" />
-                        <input type="submit" value="Pesquisar" />
+                        <input class="btn btn-primary" type="submit" value="Pesquisar" />
                     </p>
                 </form>
             </th>
             <th>
-                <label>Descrição</label>
-                @*@Html.DisplayNameFor(model => model.Descricao)*@
+                @Html.DisplayNameFor(model => model.Descricao)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Quantidade)
@@ -54,5 +53,5 @@
     </tbody>
 </table>
 <p>
-    <a class="btn btn-success" asp-action="List" asp-controller="ItemDoado" clas> Voltar </a>
+    <a class="btn btn-primary" asp-action="List" asp-controller="ItemDoado" clas> Voltar </a>
 </p>
