--- a/SaraiManagement/Views/ItemDoado/Create.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Create.cshtml
@@ -29,9 +29,9 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Finalizar" class="btn btn-primary">
-                <input type="submit" value="Novo item" class="btn btn-success" asp-route-x="Sim" />
-                <input type="submit" value="Vizualizar Itens" class="btn btn-danger" asp-route-x="Vizualizar">
+                <input type="submit" value="Finalizar" class="btn btn-success">
+                <input type="submit" value="Novo item" class="btn btn-primary" asp-route-x="Sim" />
+                <input type="submit" value="Vizualizar Itens" class="btn btn-primary" asp-route-x="Vizualizar">
             </div>
         </form>
     </div>
