--- a/SaraiManagement/Views/TelaInicial/Index.cshtml
+++ b/SaraiManagement/Views/TelaInicial/Index.cshtml
@@ -170,6 +170,8 @@
             </div>
             <div class="modal-body" style="margin: 0 auto">
                 <a asp-controller="Doacao" asp-action="Create" class="btn btn-primary">Realizar Doação</a>
+                <a asp-controller="Doacao" asp-action="List" class="btn btn-primary">Visualizar Doaçoes</a>
+
             </div>
         </div>
     </div>
