--- a/SaraiManagement/Views/Donatario/Details.cshtml
+++ b/SaraiManagement/Views/Donatario/Details.cshtml
@@ -38,6 +38,7 @@
     </dl>
 </div>
 <div>
+    <a asp-controller="Doacao" asp-action="ListPorID" asp-route-id="@Model.DonatarioID" class="btn btn-info">Visualizar Doaçoes</a>
     <a asp-action="Edit" asp-route-id="@Model.DonatarioID" class="btn btn-primary" role="button" aria-pressed="true">Editar</a>
     <a asp-action="Delete" asp-route-id="@Model.DonatarioID" class="btn btn-danger" role="button" aria-pressed="true">Excluir</a>
     <a asp-action="List" asp-route-id="@Model.DonatarioID" class="btn btn-success" role="button" aria-pressed="true">Voltar</a>
