--- a/SaraiManagement/Views/Doacao/List.cshtml
+++ b/SaraiManagement/Views/Doacao/List.cshtml
@@ -26,7 +26,7 @@
     <thead>
         <tr>
             <th>
-                Donatario
+                Donatário
             </th>
 
             <th>
@@ -36,7 +36,7 @@
                 Data
             </th>
             <th>
-                Usuario
+                Usuário
             </th>
             <th>
 
